# husky

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  attribution.md  package.json  svelte.config.js
.devcontainer/: .devcontainer.json  Dockerfile  devcontainer.json
src/: app.css
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  data.rs  event.rs  main.rs
src/lib/: CharacterIcon.svelte  Editor.svelte  Login.svelte  Messages.svelte  account.ts  data.ts  formatting.ts  rust.ts  session.ts  types.ts  util.ts
src/routes/: +page.svelte
src/routes/(main)/: +layout.svelte  +layout.ts  Sidebar.svelte
src/routes/(main)/people/: +layout.svelte  +layout.ts  +page.ts  Character.svelte
src/routes/(main)/people/bookmarks/: +page.svelte
src/routes/(main)/people/everyone/: +page.svelte
src/routes/(main)/people/friends/: +page.svelte
src/routes/(main)/people/recent/: +page.svelte
src/routes/(main)/private-messages/[character]/: +page.svelte  +page.ts
src/routes/[...other]/: +page.ts
src/routes/app-main/: +layout.svelte  +page.svelte  Sidebar.svelte
src/routes/characters/: +page.svelte  Character.svelte  Characters.svelte
