[package]
name = "husky"
version = "0.1.0"
description = "An F-Chat client using Tauri and SvelteKit, with a Rust backend."
authors = ["Feathers"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }
tokio = { version = "^1.21", features = [
  "full",
] } # If I don't need all, I can trim it later.
f-chat-rs = { git = "https://github.com/feathrs/f-chat-rs" }
thiserror = "^1.0" # For error implementations
dashmap = "^5.4" # For maps and sets requiring concurrent access (cache)
chrono = "^0.4" # For timestamps.

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
